--- a/apps/pos/package.json
+++ b/apps/pos/package.json
@@ -3,14 +3,14 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "node ../../scripts/sync-expo-env.js && expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
-    "dev": "expo start --port 8083"
+    "dev": "node ../../scripts/sync-expo-env.js && expo start --port 8083"
   },
   "jest": {
     "preset": "jest-expo"
