--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
-    "dev": "concurrently \"turbo run dev\" \"cd apps/main-api && go run main.go\" \"cd apps/solana-api && yarn dev\"",
+    "dev": "concurrently \"turbo run dev\" \"cd apps/main-api && go run cmd/api/main.go\"",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
