--- a/apps/solana-api/package.json
+++ b/apps/solana-api/package.json
@@ -11,6 +11,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@solana/web3.js": "^1.98.1",
+    "bip39": "^3.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
