--- a/apps/wallet/tsconfig.json
+++ b/apps/wallet/tsconfig.json
@@ -5,6 +5,9 @@
     "paths": {
       "@/*": [
         "./*"
+      ],
+      "@repo/ui": [
+        "../../packages/ui"
       ]
     }
   },
@@ -12,6 +15,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "svg.d.ts"
   ]
 }
