--- a/apps/token-core/tsconfig.json
+++ b/apps/token-core/tsconfig.json
@@ -1,10 +1,22 @@
+// {
+//   "compilerOptions": {
+//     "types": ["mocha", "chai"],
+//     "typeRoots": ["./node_modules/@types"],
+//     "lib": ["es2015"],
+//     "module": "commonjs",
+//     "target": "es6",
+//     "esModuleInterop": true
+//   }
+// }
+
 {
+  "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "types": ["mocha", "chai"],
-    "typeRoots": ["./node_modules/@types"],
-    "lib": ["es2015"],
-    "module": "commonjs",
-    "target": "es6",
-    "esModuleInterop": true
-  }
+    "strict": true,
+    "paths": {
+      "@/*": ["./*"],
+      "@repo/ui": ["../../packages/ui"]
+    }
+  },
+  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts", "svg.d.ts"]
 }
