--- a/apps/solana-api/package.json
+++ b/apps/solana-api/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "ts-node-dev --respawn src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "lint": "eslint --ext .ts ./src",
@@ -11,13 +11,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.1",
+    "alchemy-sdk": "^3.5.7",
     "bip39": "^3.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.0",
     "helmet": "^7.1.0",
+    "node-fetch": "^2",
     "pino": "^9.6.0",
     "pino-http": "^10.4.0",
     "zod": "^3.24.3"
@@ -27,6 +30,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
+    "@types/node-fetch": "^2",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "supertest": "^6.3.3",
