--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "packageManager": "yarn@1.22.22",
   "workspaces": [
     "apps/*",
-    "packages/*"
+    "packages/*",
+    "scripts/*"
   ]
 }
