--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@team556/ui": "*",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.46",
     "expo-blur": "~14.0.3",
     "expo-clipboard": "~7.0.1",
