--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "solana-api:dev": "yarn workspace solana-api dev",
     "solana-api:build": "yarn workspace solana-api build",
     "solana-api:start": "yarn workspace solana-api start",
-    "token:build": "yarn workspace token-core build"
+    "token:build": "yarn workspace token-core build",
+    "deploy:solana-api": "flyctl deploy -a team556-solana-api -c apps/solana-api/fly.toml",
+    "build:wallet-web": "cd apps/wallet && npx expo export --platform web --clear && cd ../..",
+    "deploy:wallet-web": "cd apps/wallet && flyctl deploy && cd ../..",
+    "deploy:wallet-web:full": "yarn build:wallet-web && yarn deploy:wallet-web"
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
