--- a/apps/main-api/Dockerfile
+++ b/apps/main-api/Dockerfile
@@ -4,15 +4,16 @@ FROM golang:1.23-alpine AS builder
 WORKDIR /app
 
 # Copy go.mod and go.sum first to leverage Docker cache
-COPY go.mod go.sum ./
+# Paths are relative to the build context (monorepo root)
+COPY apps/main-api/go.mod apps/main-api/go.sum ./
 RUN go mod download
 
-# Copy the rest of the application source code
-COPY . .
+# Copy the rest of the application source code from the main-api directory
+COPY apps/main-api/. .
 
 # Build the application binary
 # CGO_ENABLED=0 disables Cgo, needed for static linking often useful in containers
-# -ldflags="-s -w" strips debug symbols and info, reducing binary size
+# -ldflags="-s -w" strips debug information, reducing binary size
 RUN CGO_ENABLED=0 GOOS=linux go build -ldflags="-s -w" -o main cmd/api/main.go
 
 # Stage 2: Create the final lightweight image
