--- a/apps/solana-api/package.json
+++ b/apps/solana-api/package.json
@@ -17,6 +17,7 @@
     "bip39": "^3.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ed25519-hd-key": "^1.3.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.0",
     "helmet": "^7.1.0",
