--- a/apps/solana-api/package.json
+++ b/apps/solana-api/package.json
@@ -11,12 +11,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@jup-ag/api": "^6.0.41",
     "@solana/spl-token": "^0.4.13",
-    "@solana/web3.js": "^1.98.1",
+    "@solana/web3.js": "^1.98.2",
     "alchemy-sdk": "^3.5.7",
     "bip39": "^3.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.5.0",
     "ed25519-hd-key": "^1.3.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.0",
@@ -27,6 +28,7 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@types/bs58": "^4.0.4",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
