--- a/apps/solana-api/package.json
+++ b/apps/solana-api/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.0",
+    "ed25519-hd-key": "^1.3.0",
     "helmet": "^7.1.0",
     "node-fetch": "^2",
     "pino": "^9.6.0",
