--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "deploy:wallet-web": "cd apps/wallet && flyctl deploy && cd ../..",
     "deploy:wallet-web:full": "yarn build:wallet-web && yarn deploy:wallet-web",
     "generate-presale-csv": "dotenv -e .env -- ts-node scripts/generate-presale-codes-csv.ts",
-    "send-presale-emails": "dotenv -e .env -- ts-node scripts/send-presale-codes.ts"
+    "send-presale-emails": "dotenv -e .env -- ts-node scripts/send-presale-codes.ts",
+    "retry-presale-emails": "dotenv -e .env -- ts-node scripts/retry-failed-presale-emails.ts"
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
