--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,4 @@ yarn-error.log*
 apps/token-core/mainnet-test-wallets
 apps/token-core/wallets
 apps/token-core/target
-
+apps/token-core/deploy-wallets/*
