--- a/apps/token-core/package.json
+++ b/apps/token-core/package.json
@@ -12,7 +12,8 @@
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
     "build": "node ../../scripts/sync-expo-env.js && anchor build && mkdir -p ../../packages/target/idl && mkdir -p ../../packages/target/types && mkdir -p ../../packages/target/deploy && mv target/idl/team.json ../../packages/target/idl/ && mv target/types/team.ts ../../packages/target/types/ && mv target/deploy/team.so ../../packages/target/deploy/ && rm -rf target",
-    "clean": "rm -rf target ../../packages/target"
+    "clean": "rm -rf target ../../packages/target",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@coral-xyz/anchor": "0.29.0",
@@ -28,7 +29,7 @@
     "assert": "*",
     "bn.js": "*",
     "csv-parse": "4",
-    "csv-stringify": "4",
+    "csv-stringify": "^6.5.2",
     "dotenv": "^16.5.0",
     "rpc-websockets": "^10.0.0"
   },
@@ -38,6 +39,8 @@
     "@types/mocha": "^10.0.1",
     "chai": "^4.3.8",
     "mocha": "^10.2.0",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.0.2",
     "ts-mocha": "^10.0.0",
     "typescript": "^5.2.2"
