Add armory views and update UI components for digital wallet. Fixed encryption.  Added firearms seed file. WORKING

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -13,8 +13,10 @@
     "@types/node": "^22.15.2",
     "@types/pg": "^8.11.14",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.7.2",
     "dotenv": "^16.5.0",
     "pg": "^8.15.5",
+    "scrypt-js": "^3.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "uuid": "^11.1.0"
