feat: add new firearm form with date picker and local storage integration

--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -18,9 +18,12 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-segmented-control/segmented-control": "2.5.4",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@solana/codecs-data-structures": "^2.1.0",
+    "@solana/codecs-strings": "^2.1.0",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
     "@team556/ui": "*",
@@ -44,6 +47,7 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
+    "fastestsmallesttextencoderdecoder": "^1.0.22",
     "process": "^0.11.10",
     "react": "18.3.1",
     "react-dom": "18.3.1",
