--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -38,6 +38,8 @@
     "expo-crypto": "~14.0.2",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-image": "^2.1.7",
+    "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
