--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -52,6 +52,7 @@
     "fastestsmallesttextencoderdecoder": "^1.0.22",
     "process": "^0.11.10",
     "react": "18.3.1",
+    "react-datepicker": "^8.3.0",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
