--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "deploy:main-api": "flyctl deploy -a team556-main-api -c apps/main-api/fly.toml",
     "build:wallet-web": "cd apps/wallet && npx expo export --platform web --clear && cd ../..",
     "deploy:wallet-web": "cd apps/wallet && flyctl deploy && cd ../..",
-    "deploy:wallet-web:full": "yarn build:wallet-web && yarn deploy:wallet-web"
+    "deploy:wallet-web:full": "yarn build:wallet-web && yarn deploy:wallet-web",
+    "clean": "rm -rf node_modules yarn.lock apps/wallet/node_modules apps/wallet/yarn.lock && yarn"
   },
   "devDependencies": {
     "@types/node": "^22.15.9",
