feat: add page titles and configure app metadata for Team556 Digital Armory

--- a/apps/wallet/app.json
+++ b/apps/wallet/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "prototype",
-    "slug": "prototype",
+    "name": "Team556 Digital Armory",
+    "slug": "team556-digital-armory",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -9,13 +9,15 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.team556.digital-armory"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.team556.digital-armory"
     },
     "web": {
       "bundler": "metro",
@@ -32,7 +34,8 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
