--- a/apps/solana-api/fly.toml
+++ b/apps/solana-api/fly.toml
@@ -14,8 +14,8 @@ console_command = '/bin/sh'
 [http_service]
   internal_port = 4000
   force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
+  auto_stop_machines = 'off'
+  auto_start_machines = false
   min_machines_running = 0
   processes = ['app']
 
