--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native": "^7.0.14",
     "@solana/codecs-data-structures": "^2.1.0",
     "@solana/codecs-strings": "^2.1.0",
+    "@solana/pay": "^0.2.5",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
     "@team556/ui": "*",
@@ -32,7 +33,9 @@
     "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
     "expo": "~52.0.46",
+    "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.3",
+    "expo-camera": "^16.1.6",
     "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.8",
     "expo-crypto": "~14.0.2",
