--- a/apps/solana-api/package.json
+++ b/apps/solana-api/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@jup-ag/api": "^6.0.41",
+    "@solana/pay": "^0.2.5",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
     "alchemy-sdk": "^3.5.7",
+    "bignumber.js": "^9.3.0",
     "bip39": "^3.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
