feat: add presale user type check and unlimited items for P1 users

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -14,6 +14,7 @@
     "@types/pg": "^8.11.14",
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.2",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.5.0",
     "pg": "^8.15.5",
     "scrypt-js": "^3.0.2",
