feat: implement presale token claiming system with P1P1 airdrop functionality

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ apps/token-core/mainnet-test-wallets
 apps/token-core/wallets
 apps/token-core/target
 apps/token-core/deploy-wallets/*
+
+treasury.json
