--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -35,7 +35,7 @@
     "expo": "~52.0.46",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.3",
-    "expo-camera": "^16.1.6",
+    "expo-camera": "~16.0.18",
     "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.8",
     "expo-crypto": "~14.0.2",
@@ -89,6 +89,9 @@
   "expo": {
     "doctor": {
       "reactNativeDirectoryCheck": {
+        "exclude": [
+          "expo-barcode-scanner"
+        ],
         "listUnknownPackages": false
       }
     }
