--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -16,7 +16,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "~14.0.4",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-segmented-control/segmented-control": "2.5.4",
@@ -24,15 +24,17 @@
     "@react-navigation/native": "^7.0.14",
     "@solana/codecs-data-structures": "^2.1.0",
     "@solana/codecs-strings": "^2.1.0",
+    "@solana/options": "^2.1.1",
     "@solana/pay": "^0.2.5",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
+    "@tamagui/lucide-icons": "^1.130.5",
     "@team556/ui": "*",
     "@types/bip39": "^2.4.2",
     "bip39": "^3.1.0",
     "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.46",
+    "expo": "~52.0.47",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.3",
     "expo-camera": "~16.0.18",
@@ -74,14 +76,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@tamagui/babel-plugin": "^1.130.5",
+    "@tamagui/metro-plugin": "^1.130.5",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.16",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
+    "jest-expo": "~52.0.0",
     "react-native-svg-transformer": "^1.5.0",
-    "react-test-renderer": "18.3.1",
+    "react-test-renderer": "18.2.0",
     "rn-nodeify": "^10.3.0",
     "typescript": "^5.3.3"
   },
