--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -45,7 +45,7 @@
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.7",
-    "expo-image-manipulator": "^13.1.7",
+    "expo-image-manipulator": "~13.0.6",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
@@ -59,7 +59,7 @@
     "fastestsmallesttextencoderdecoder": "^1.0.22",
     "process": "^0.11.10",
     "react": "18.3.1",
-    "react-datepicker": "^8.3.0",
+
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
