--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -55,11 +55,12 @@
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.9",
+    "expo-updates": "~0.27.4",
     "expo-web-browser": "~14.0.2",
     "fastestsmallesttextencoderdecoder": "^1.0.22",
     "process": "^0.11.10",
     "react": "18.3.1",
-
+    "react-datepicker": "^7.3.0",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
@@ -74,8 +75,7 @@
     "readable-stream": "^1.0.33",
     "stream-browserify": "^1.0.0",
     "vm-browserify": "^0.0.4",
-    "zustand": "^5.0.3",
-    "react-datepicker": "^7.3.0"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -84,14 +84,14 @@
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.16",
     "@types/react": "~18.3.12",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
     "rn-nodeify": "^10.3.0",
-    "typescript": "^5.3.3",
-    "@types/react-datepicker": "^6.2.0"
+    "typescript": "^5.3.3"
   },
   "private": true,
   "expo": {
