--- a/apps/wallet/app.json
+++ b/apps/wallet/app.json
@@ -11,7 +11,10 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.team.digitalarmory"
+      "bundleIdentifier": "com.team.digitalarmory",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
