--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -36,7 +36,6 @@
     "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
     "expo": "~52.0.47",
-    "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.3",
     "expo-camera": "~16.0.18",
     "expo-clipboard": "~7.0.1",
@@ -50,6 +49,7 @@
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
+    "react-native-helmet-async": "^2.0.4",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
@@ -97,9 +97,7 @@
   "expo": {
     "doctor": {
       "reactNativeDirectoryCheck": {
-        "exclude": [
-          "expo-barcode-scanner"
-        ],
+        "exclude": [],
         "listUnknownPackages": false
       }
     }
