--- a/app.json
+++ b/app.json
@@ -1,3 +1,9 @@
 {
-  "expo": {}
+  "expo": {
+    "extra": {
+      "eas": {
+        "projectId": "c1896c5e-cc90-4d9d-bd9c-6a9549fbdfbe"
+      }
+    }
+  }
 }
