--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -49,7 +49,6 @@
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
-    "react-native-helmet-async": "^2.0.4",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
@@ -65,6 +64,7 @@
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-helmet-async": "^2.0.4",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
@@ -86,6 +86,7 @@
     "@types/react": "~18.3.12",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-test-renderer": "^18.3.0",
+    "eslint-config-expo": "~8.0.1",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.0",
     "react-native-svg-transformer": "^1.5.0",
