--- a/apps/pos/package.json
+++ b/apps/pos/package.json
@@ -16,11 +16,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "~14.0.4",
+    "@expo/vector-icons": "^14.1.0",
     "@gorhom/bottom-sheet": "^5.1.6",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-segmented-control/segmented-control": "2.5.4",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-segmented-control/segmented-control": "2.5.7",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@solana/codecs-data-structures": "^2.1.0",
@@ -32,48 +32,51 @@
     "@tamagui/lucide-icons": "^1.130.5",
     "@team556/ui": "*",
     "@types/bip39": "^2.4.2",
+    "@types/react": "~19.0.10",
     "bip39": "^3.1.0",
     "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.47",
-    "expo-blur": "~14.0.3",
-    "expo-camera": "~16.0.18",
-    "expo-clipboard": "~7.0.1",
-    "expo-constants": "~17.0.8",
-    "expo-crypto": "~14.0.2",
-    "expo-font": "~13.0.4",
-    "expo-haptics": "~14.0.1",
-    "expo-image": "~2.0.7",
-    "expo-image-manipulator": "~13.0.6",
-    "expo-image-picker": "~16.0.6",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.20",
-    "expo-secure-store": "~14.0.1",
-    "expo-splash-screen": "~0.29.24",
-    "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.9",
-    "expo-updates": "~0.27.4",
-    "expo-web-browser": "~14.0.2",
+    "expo": "~53.0.0",
+    "expo-blur": "~14.1.5",
+    "expo-camera": "~16.1.11",
+    "expo-clipboard": "~7.1.5",
+    "expo-constants": "~17.1.7",
+    "expo-crypto": "~14.1.5",
+    "expo-font": "~13.3.2",
+    "expo-haptics": "~14.1.4",
+    "expo-image": "~2.4.1",
+    "expo-image-manipulator": "~13.1.7",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-linking": "~7.1.7",
+    "expo-router": "~5.1.7",
+    "expo-secure-store": "~14.2.4",
+    "expo-splash-screen": "~0.30.10",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.11",
+    "expo-updates": "~0.28.17",
+    "expo-web-browser": "~14.2.0",
     "fastestsmallesttextencoderdecoder": "^1.0.22",
+    "jest-expo": "~53.0.10",
     "process": "^0.11.10",
-    "react": "18.3.1",
+    "react": "19.0.0",
     "react-datepicker": "^7.3.0",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.6",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-helmet-async": "^2.0.4",
     "react-native-qrcode-svg": "^6.3.15",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5",
     "readable-stream": "^1.0.33",
     "stream-browserify": "^1.0.0",
+    "typescript": "~5.8.3",
     "vm-browserify": "^0.0.4",
     "zustand": "^5.0.3"
   },
