Fix expo upgrade

--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -21,8 +21,6 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-segmented-control/segmented-control": "2.5.7",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
     "@solana/codecs-data-structures": "^2.1.0",
     "@solana/codecs-strings": "^2.1.0",
     "@solana/options": "^2.1.1",
@@ -35,6 +33,7 @@
     "@types/react": "~19.0.10",
     "bip39": "^3.1.0",
     "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "date-fns": "^4.1.0",
     "eslint-config-expo": "~9.2.0",
     "expo": "~53.0.0",
@@ -68,6 +67,7 @@
     "react-datepicker": "^7.3.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
+    "react-native-crypto": "^2.2.1",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-helmet-async": "^2.0.4",
