--- a/package.json
+++ b/package.json
@@ -67,6 +67,14 @@
     "metro-transform-worker": "0.82.5",
     "expo-modules-autolinking": "~2.1.0",
     "@expo/config-plugins": "~10.1.1",
-    "@expo/metro-config": "~0.20.0"
+    "@expo/metro-config": "~0.20.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "**/react": "19.0.0",
+    "**/react-dom": "19.0.0"
+  },
+  "overrides": {
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   }
 }
