--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,9 +23,7 @@
     "typescript": "~5.8.3"
   },
   "dependencies": {
-    "expo-image": "~2.4.1",
-    "react": "*",
-    "react-dom": "19.0.0"
+    "expo-image": "~2.4.1"
   },
   "main": "index.ts",
   "types": "index.ts",
