--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -72,6 +72,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-helmet-async": "^2.0.4",
     "react-native-qrcode-svg": "^6.3.15",
+    "react-native-randombytes": "^3.6.2",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
@@ -90,6 +91,7 @@
     "@tamagui/metro-plugin": "^1.130.5",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.16",
+    "@types/minimatch": "^6.0.0",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
@@ -101,7 +103,10 @@
   "expo": {
     "doctor": {
       "reactNativeDirectoryCheck": {
-        "exclude": [],
+        "exclude": [
+          "metro",
+          "react-native-crypto"
+        ],
         "listUnknownPackages": false
       }
     }
