--- a/apps/wallet/tsconfig.json
+++ b/apps/wallet/tsconfig.json
@@ -4,6 +4,7 @@
     "strict": true,
     "jsx": "react-native",
     "esModuleInterop": true,
+    "typeRoots": ["./node_modules/@types"],
     "paths": {
       "@/*": [
         "./*"
